--- a/src/app/khachhang/dsdonhang/dsdonhang.component.html
+++ b/src/app/khachhang/dsdonhang/dsdonhang.component.html
@@ -1,22 +1,21 @@
 
  <!--shop toolbar end-->
- <!-- <div class="row shop_wrapper">
+ <div class="row shop_wrapper">
     
     <div class="col-lg-12 col-md-12 col-12 ">
        
         <article class="single_product">
             <figure>
-                <h3 class="product_content_inner">Đơn hàng của tôi  <button class="btn btn-info" style="float:right;">+ Thêm địa chỉ mới</button></h3>
+                <h3 class="product_content_inner">Đơn hàng của tôi </h3>
                 
                
                <table  class="table">
-                   <tr *ngFor="let t of tk[0].dsdiachi">
-                       <td><label style="float: right;"  for=""> Số điện thoại:</label></td>
+                   <tr *ngFor="let dh of dsdonhang">
+                       <td><label style="float: right;"  for=""> Mã đơn hàng:</label></td>
                        <td>
-                           {{t.soDienThoai}}
-                          
+                           {{dh.maDH}}
                        </td>
-                       <td><label style="float: right;" for=""> Địa chỉ</label></td>
+                       <!-- <td><label style="float: right;" for=""> Địa chỉ</label></td>
                        <td>
                            <p>{{t.chiTiet}}</p>
                            
@@ -34,18 +33,18 @@
                            <p><a href=""><u>Sửa</u></a>&nbsp;&nbsp;&nbsp;<a href=""><u> Xóa</u></a></p>
                            <button *ngIf="t.main!=1" class="btn btn-primary">Thiết lập mặc định</button>
                            <button *ngIf="t.main==1" class="btn btn-primary" style="cursor: not-allowed;background-color: rgb(224, 224, 224);">Thiết lập mặc định</button>
-                        </td>
+                        </td> -->
                    </tr>
                </table>
             </figure>
             <figure>
-                áss
+                
             </figure>
         </article>
     </div>
    
 </div>
- -->
+
 
 
 <!--shop toolbar end-->
