--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -42,7 +42,7 @@
                         </ul>
                     </div> 
                     <div class="search_container">
-                        <form action="#" method="GET">
+                        <form action="#" (ngSubmit)="search()">
                            <div class="hover_category">
                                 <select class="select_option" name="select" id="categori1">
                                     <option selected value="1">Tất cả</option>
