--- a/src/app/sanpham/sanphamtheoloai1/sanphamtheoloai1.component.html
+++ b/src/app/sanpham/sanphamtheoloai1/sanphamtheoloai1.component.html
@@ -4,7 +4,7 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="shop_banner_thumb">
-                                <img src="assets/img/bg/banner23.jpg" alt="">
+                                <h4>Loại</h4>
                             </div>
                         </div>
                     </div>
