--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,171 +1,4 @@
-<div class="offcanvas_menu">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <div class="canvas_open">
-                    <a href="javascript:void(0)"><i class="ion-navicon"></i></a>
-                </div>
-                <div class="offcanvas_menu_wrapper">
-                    <div class="canvas_close">
-                          <a href="javascript:void(0)"><i class="ion-android-close"></i></a>  
-                    </div>
-                    <div class="call_support">
-                        <p><i class="icon-phone-call" aria-hidden="true"></i> <span>Call us: <a href="tel:+(+800)456789">(+800) 456 789</a></span></p>
 
-                    </div>
-                    <div class="header_account">
-                        <ul>
-                            <li class="language"><a href="#"><img src="assets/img/logo/language.png" alt=""> english <i class="ion-chevron-down"></i></a>
-                                <ul class="dropdown_language">
-                                    <li><a href="#">English</a></li>
-                                    <li><a href="#">Germany</a></li>
-                                    <li><a href="#">Japanese</a></li>
-                                </ul>
-                            </li>
-                            <li class="currency"><a href="#">USD <i class="ion-chevron-down"></i></a>
-                                <ul class="dropdown_currency">
-                                    <li><a href="#">EUR – Euro</a></li>
-                                    <li><a href="#">GBP – British Pound</a></li>
-                                    <li><a href="#">INR – India Rupee</a></li>
-                                </ul>
-                            </li>
-                           
-                        </ul>
-                    </div>
-                    <div class="header_top_links">
-                        <ul>
-                            <li><a href="login.html">nút</a></li>
-                            <li *ngIf="tf==false"><a href="login">Đăng nhập-đăng ký</a></li>
-                             <li *ngIf="tf==true" class="main_menu menu_position text-left"><a href="login">Tài khoản</a></li>
-                            <li><a href="cart.html">Giỏ hàng</a></li>
-                            <li><a href="checkout.html">Kênh bán hàng</a></li>
-                        </ul>
-                    </div> 
-                    <div class="search_container">
-                        <form action="#" (ngSubmit)="search()">
-                           <div class="hover_category">
-                                <select class="select_option" name="select" id="categori1">
-                                    <option selected value="1">Tất cả</option>
-                                    <option value="2">Accessories</option>
-                                    <option value="3">Accessories & More</option>
-                                    <option value="4">Butters & Eggs</option>
-                                    <option value="5">Camera & Video </option>
-                                    <option value="6">Mornitors</option>
-                                    <option value="7">Tablets</option>
-                                    <option value="8">Laptops</option>
-                                    <option value="9">Handbags</option>
-                                    <option value="10">Headphone & Speaker</option>
-                                    <option value="11">Herbs & botanicals</option>
-                                    <option value="12">Vegetables</option>
-                                    <option value="13">Shop</option>
-                                    <option value="14">Laptops & Desktops</option>
-                                    <option value="15">Watchs</option>
-                                    <option value="16">Electronic</option>
-                                </select>                        
-                           </div>
-                            <div class="search_box">
-                                <input placeholder="tìm kiếm sản phẩm" type="text">
-                                <button type="submit">Tìm</button> 
-                            </div>
-                        </form>
-                    </div> 
-                    <div id="menu" class="text-left ">
-                        <ul class="offcanvas_main_menu">
-                            <li class="menu-item-has-children active">
-                                <a href="#">Home</a>
-                                <ul class="sub-menu">
-                                    <li><a href="index.html">Home 1</a></li>
-                                    <li><a href="index-2.html">Home 2</a></li>
-                                    <li><a href="index-3.html">Home 3</a></li>
-                                    <li><a href="index-4.html">Home 4</a></li>
-                                </ul>
-                            </li>
-                            <li class="menu-item-has-children">
-                                <a href="#">Shop</a>
-                                <ul class="sub-menu">
-                                    <li class="menu-item-has-children">
-                                        <a href="#">Shop Layouts</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="shop.html">shop</a></li>
-                                            <li><a href="shop-fullwidth.html">Full Width</a></li>
-                                            <li><a href="shop-fullwidth-list.html">Full Width list</a></li>
-                                            <li><a href="shop-right-sidebar.html">Right Sidebar </a></li>
-                                            <li><a href="shop-right-sidebar-list.html"> Right Sidebar list</a></li>
-                                            <li><a href="shop-list.html">List View</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="menu-item-has-children">
-                                        <a href="#">other Pages</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="cart.html">cart</a></li>
-                                            <li><a href="wishlist.html">Wishlist</a></li>
-                                            <li><a href="checkout.html">Checkout</a></li>
-                                            <li><a href="my-account.html">my account</a></li>
-                                            <li><a href="404.html">Error 404</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="menu-item-has-children">
-                                        <a href="#">Product Types</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="product-details.html">product details</a></li>
-                                            <li><a href="product-sidebar.html">product sidebar</a></li>
-                                            <li><a href="product-grouped.html">product grouped</a></li>
-                                            <li><a href="variable-product.html">product variable</a></li>
-                                            <li><a href="product-countdown.html">product countdown</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="menu-item-has-children">
-                                <a href="#">blog</a>
-                                <ul class="sub-menu">
-                                    <li><a href="blog.html">blog</a></li>
-                                    <li><a href="blog-details.html">blog details</a></li>
-                                    <li><a href="blog-fullwidth.html">blog fullwidth</a></li>
-                                    <li><a href="blog-sidebar.html">blog sidebar</a></li>
-                                    <li><a href="blog-no-sidebar.html">blog no sidebar</a></li>
-                                </ul>
-
-                            </li>
-                            <li class="menu-item-has-children">
-                                <a href="#">pages </a>
-                                <ul class="sub-menu">
-                                    <li><a href="about.html">About Us</a></li>
-                                    <li><a href="faq.html">Frequently Questions</a></li>
-                                    <li><a href="contact.html">contact</a></li>
-                                    <li><a href="login.html">login</a></li>
-                                    <li><a href="404.html">Error 404</a></li>
-                                    <li><a href="compare.html">compare</a></li>
-                                    <li><a href="privacy-policy.html">privacy policy</a></li>
-                                    <li><a href="coming-soon.html">coming soon</a></li>
-                                </ul>
-                            </li>
-                            <li class="menu-item-has-children">
-                                <a href="my-account.html">my account</a>
-                            </li>
-                            <li class="menu-item-has-children">
-                                <a href="about.html">Giới thiệu</a>
-                            </li>
-                            <li class="menu-item-has-children">
-                                <a href="contact.html"> </a> 
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="offcanvas_footer">
-                        <span><a href="#"><i class="fa fa-envelope-o"></i> info@yourdomain.com</a></span>
-                        <ul>
-                            <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li class="pinterest"><a href="#"><i class="fa fa-pinterest-p"></i></a></li>
-                            <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                            <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 <!-- 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -249,15 +82,15 @@
                             <div class="header_right_box">
                                 <div class="search_container">
                                     <!-- that's the form -->
-                                    <form action="facebook.com" method="POST">
+                                    <form (ngSubmit)="search()" [formGroup]="formSearch">
                                        <div class="hover_category">
-                                            <select class="btn btn-default" style="border: none;" name="select" id="categori2">
-                                                <option selected value="all">Tất cả danh mục</option>
+                                            <select class="btn btn-default" style="border: none;" formControlName="loai" id="categori2">
+                                                <option [value]="0">Tất cả danh mục</option>
                                                 <option *ngFor="let item of menus" value="{{item.MaLoai}}">{{item.tenLoai}}</option>
                                             </select>                        
                                        </div>
                                         <div class="search_box">
-                                            <input placeholder="tìm kiếm sản phẩm" type="text">
+                                            <input placeholder="tìm kiếm sản phẩm" formControlName="keyWord" type="text">
                                             <button type="submit">Tìm</button> 
                                         </div>
                                     </form>
