--- a/src/app/giohang/checkout/checkout.component.html
+++ b/src/app/giohang/checkout/checkout.component.html
@@ -277,7 +277,7 @@
                                     </div> 
                                    <div class="panel-default">
                                         <input id="payment_defult" name="check_method" type="radio" data-target="createp_account" />
-                                        <label for="payment_defult" data-toggle="collapse" data-target="#collapsedefult" aria-controls="collapsedefult">PayPal <img src="assets/img/icon/papyel.png" alt=""></label>
+                                        <label for="payment_defult" data-toggle="collapse" data-target="#collapsedefult" aria-controls="collapsedefult">Thẻ tín dụng/ ghi nợ <img src="assets/img/icon/papyel.png" alt=""></label>
 
                                         <div id="collapsedefult" class="collapse one" data-parent="#accordion">
                                             <div class="card-body1">
