--- a/src/app/sanpham/sptheoloai/sptheoloai.component.html
+++ b/src/app/sanpham/sptheoloai/sptheoloai.component.html
@@ -42,7 +42,7 @@
                             <figure>
                                 <div class="product_thumb">
                                     <a class="primary_img" href="shop/chi-tiet/{{sploai.link}}"><img src="assets/img/product/{{sploai.anh}}" alt=""></a>
-                                    <a class="secondary_img"href="shop/chi-tiet/{{sploai.link}}"><img src="assets/img/product/product2.jpg" alt=""></a>
+                                    <!-- <a class="secondary_img"href="shop/chi-tiet/{{sploai.link}}"><img src="assets/img/product/product2.jpg" alt=""></a> -->
                                     <div class="label_product">
                                         <span class="label_new">Emarket</span>
                                     </div>
@@ -53,7 +53,7 @@
                                 <div class="product_content grid_content">
                                     <div class="product_content_inner">
                                         <h4 class="product_name"><a href="shop/chi-tiet/{{sploai.link}}">{{sploai.tenSanPham}}</a></h4>
-                                        <div class="product_rating">
+                                        <!-- <div class="product_rating">
                                            <ul>
                                                <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
                                                <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
@@ -61,7 +61,7 @@
                                                <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
                                                <li><a href="#"><i class="ion-android-star-outline"></i></a></li>
                                            </ul>
-                                        </div>
+                                        </div> -->
                                         <div class="price_box"> 
                                             
                                             <span class="current_price">{{sploai.giahientai.gia | currency:'VND':true:'1.0-2'}}</span>
