--- a/src/app/giohang/checkout/checkout.component.html
+++ b/src/app/giohang/checkout/checkout.component.html
@@ -29,25 +29,8 @@
                         </h3>
                          <div id="checkout_login" class="collapse" data-parent="#accordion">
                             <div class="checkout_info">
-                                <p>Đăng nhập </p>  
-                                <form action="#">  
-                                    <div class="form_group">
-                                        <label>Tên người dùng hoặc email <span>*</span></label>
-                                        <input type="text">     
-                                    </div>
-                                    <div class="form_group">
-                                        <label>Mật khẩu  <span>*</span></label>
-                                        <input type="text">     
-                                    </div> 
-                                    <div class="form_group group_3 ">
-                                        <button type="submit">Login</button>
-                                        <label for="remember_box">
-                                            <input id="remember_box" type="checkbox">
-                                            <span> Remember me </span>
-                                        </label>     
-                                    </div>
-                                    <a href="#">Lost your password?</a>
-                                </form>          
+                            
+                                     
                             </div>
                         </div>    
                     </div>  
@@ -63,7 +46,10 @@
 
                                     <div class="col-lg-12 mb-20">
                                         <label>Họ tên <span>*</span></label>
-                                        <input  *ngIf="!tg" type="text"  placeholder="họ tên"  formControlName="hoten">
+                                        <input  *ngIf="!tg" type="text"  placeholder="họ tên" id="hoten" formControlName="hoten">
+                                        <div id="hoten-message" class="valid-feedback">
+                                            Looks good!
+                                          </div>
                                         <input *ngIf="tg" type="text" readonly style="cursor: not-allowed;" [value]="tg.hoTen" placeholder="họ tên">    
                                     </div>
                                    
@@ -137,86 +123,40 @@
                                           <input type="text" readonly style="cursor: not-allowed;" placeholder="email" value="{{tg.tk.email}}"> 
 
                                     </div> 
-                                    <div class="col-12 mb-20">
-                                        <input id="account" type="checkbox" data-target="createp_account" />
-                                        <label for="account" data-toggle="collapse" data-target="#collapseOne" aria-controls="collapseOne">Create an account?</label>
-
-                                        <div id="collapseOne" class="collapse one" data-parent="#accordion">
-                                            <div class="card-body1">
-                                               <label> Account password   <span>*</span></label>
-                                                <input placeholder="password" type="password">  
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-12 mb-20">
-                                        <input id="address" type="checkbox" data-target="createp_account" />
-                                        <label class="righ_0" for="address" data-toggle="collapse" data-target="#collapsetwo" aria-controls="collapseOne">Ship to a different address?</label>
-
-                                        <div id="collapsetwo" class="collapse one" data-parent="#accordion">
-                                           <div class="row">
-                                                <div class="col-lg-6 mb-20">
-                                                    <label>First Name <span>*</span></label>
-                                                    <input type="text">    
-                                                </div>
-                                                <div class="col-lg-6 mb-20">
-                                                    <label>Last Name  <span>*</span></label>
-                                                    <input type="text"> 
-                                                </div>
-                                                <div class="col-12 mb-20">
-                                                    <label>Company Name</label>
-                                                    <input type="text">     
-                                                </div>
-                                                <div class="col-12 mb-20">
-                                                    <div class="select_form_select">
-                                                        <label for="countru_name">country <span>*</span></label>
-                                                        <select class="niceselect_option" name="cuntry" id="countru_name"> 
-                                                            <option value="2">bangladesh</option>      
-                                                            <option value="3">Algeria</option> 
-                                                            <option value="4">Afghanistan</option>    
-                                                            <option value="5">Ghana</option>    
-                                                            <option value="6">Albania</option>    
-                                                            <option value="7">Bahrain</option>    
-                                                            <option value="8">Colombia</option>    
-                                                            <option value="9">Dominican Republic</option>   
-
-                                                        </select>
-                                                    </div> 
-                                                </div>
-
-                                                <div class="col-12 mb-20">
-                                                    <label>Street address  <span>*</span></label>
-                                                    <input placeholder="House number and street name" type="text">     
-                                                </div>
-                                                <div class="col-12 mb-20">
-                                                    <input placeholder="Apartment, suite, unit etc. (optional)" type="text">     
-                                                </div>
-                                                <div class="col-12 mb-20">
-                                                    <label>Town / City <span>*</span></label>
-                                                    <input  type="text">    
-                                                </div> 
-                                                 <div class="col-12 mb-20">
-                                                    <label>State / County <span>*</span></label>
-                                                    <input type="text">    
-                                                </div> 
-                                                <div class="col-lg-6 mb-20">
-                                                    <label>Phone<span>*</span></label>
-                                                    <input type="text"> 
-
-                                                </div> 
-                                                 <div class="col-lg-6">
-                                                    <label> Email Address   <span>*</span></label>
-                                                      <input type="text"> 
-
-                                                </div> 
-                                            </div>
-                                        </div>
-                                    </div>
+     
+                                  
                                     <div class="col-12">
                                         <div class="order-notes">
-                                             <label for="order_note">Order Notes</label>
-                                            <textarea id="order_note" placeholder="Notes about your order, e.g. special notes for delivery."></textarea>
+                                             <label for="order_note">Ghi chú đơn hàng</label>
+                                            <textarea id="order_note" placeholder="Ghi chú cho shop, shiper"></textarea>
                                         </div>    
-                                    </div>     	    	    	    	    	    	    
+                                    </div> 
+                                    <div class="payment_method">
+                                        <div class="panel-default">
+                                             <input id="payment" name="payMethod" formControlName="payMethod" value="0" type="radio" data-target="createp_account" />
+                                             <label for="payment" data-toggle="collapse" data-target="#method" aria-controls="method">Thanh toán khi nhận hàng</label>
+     
+                                             <div id="method" class="collapse one" data-parent="#accordion">
+                                                 <div class="card-body1">
+                                                    <p>Please send a check to Store Name, Store Street, Store Town, Store State / County, Store Postcode.</p>
+                                                 </div>
+                                             </div>
+                                         </div> 
+                                        <div class="panel-default">
+                                             <input id="payment_defult" name="payMethod" formControlName="payMethod" value="1" type="radio" data-target="createp_account" /> 
+                                             <label for="payment_defult" data-toggle="collapse" data-target="#collapsedefult" aria-controls="collapsedefult">Thẻ ATM</label>
+     
+                                             <div id="collapsedefult" class="collapse one" data-parent="#accordion">
+                                                 <div class="card-body1">
+                                                    <select name="" class="form-control" >
+                                                        <option *ngFor="let bank of banks" value="{{bank.id}}">{{bank.bankName}}</option>
+                                                    </select>
+                                                    <input type="text" formControlName="maThe" placeholder="ma the ATM" class="form-control">
+                                                 </div>
+                                             </div>
+                                         </div>
+                                             
+                                     </div>     	    	    	    	    	    	    
                                 </div>
                                 <div class="order_button">
                                     <button  type="submit">Đặt Hàng</button> 
@@ -264,29 +204,7 @@
                                         </tfoot>
                                     </table>     
                                 </div>
-                                <div class="payment_method">
-                                   <div class="panel-default">
-                                        <input id="payment" name="check_method" type="radio" data-target="createp_account" />
-                                        <label for="payment" data-toggle="collapse" data-target="#method" aria-controls="method">Create an account?</label>
-
-                                        <div id="method" class="collapse one" data-parent="#accordion">
-                                            <div class="card-body1">
-                                               <p>Please send a check to Store Name, Store Street, Store Town, Store State / County, Store Postcode.</p>
-                                            </div>
-                                        </div>
-                                    </div> 
-                                   <div class="panel-default">
-                                        <input id="payment_defult" name="check_method" type="radio" data-target="createp_account" />
-                                        <label for="payment_defult" data-toggle="collapse" data-target="#collapsedefult" aria-controls="collapsedefult">Thẻ tín dụng/ ghi nợ <img src="assets/img/icon/papyel.png" alt=""></label>
-
-                                        <div id="collapsedefult" class="collapse one" data-parent="#accordion">
-                                            <div class="card-body1">
-                                               <p>Pay via PayPal; you can pay with your credit card if you don’t have a PayPal account.</p> 
-                                            </div>
-                                        </div>
-                                    </div>
-                                        
-                                </div> 
+                               
                             </form> 
                         </div>        
                     </div>
